feat: add kakaomap API script in index.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
+
+    <!-- 카카오맵 API 로드 (beforeInteractive) -->
+    <script
+      type="text/javascript"
+      src="//dapi.kakao.com/v2/maps/sdk.js?appkey=%VITE_APPKEY%&autoload=false&libraries=services"
+    ></script>
   </head>
   <body>
     <div id="root"></div>
